# Deep-aPCE

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cal_PCE_satellite_coeff.py  Cal_PCE_satellite_coeff_k_fold.py  DPCE_cantilever_beam.py  LICENSE  README.md  Test_compare_satelite.py  Test_k_fold.py  cantilever_fun.py  data_process.py  pce_loss.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
data/: samples_1000.mat  samples_10000.mat  samples_150.mat  samples_200.mat  samples_2000.mat  samples_300.mat  samples_40.mat  samples_40_0.mat  samples_50.mat  samples_500.mat  samples_50_0.mat  samples_60.mat  samples_60_0.mat  samples_70.mat  samples_70_0.mat  samples_80.mat  samples_80_0.mat  samples_90.mat  samples_90_0.mat
mu_ks/: mu_k.mat
src/: Deep_PCE.py  apc.py  data_process.py  models.py  pce_loss.py
src/__pycache__/: data_process.cpython-39.pyc.139685831937200
tests/: conftest.py  test_deep_apce.py
