[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deep-apce"
version = "1.0.0"
description = "Deep Adaptive Arbitrary Polynomial Chaos Expansion for Uncertainty Quantification"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Xiaohu Zheng", email = "zhengxiaohu16@nudt.edu.cn"}
]
maintainers = [
    {name = "Xiaohu Zheng", email = "zhengxiaohu16@nudt.edu.cn"}
]
keywords = ["uncertainty-quantification", "polynomial-chaos", "deep-learning", "reliability-engineering"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0,<2.0.0",
    "scipy>=1.7.0",
    "torch>=1.10.0,<3.0.0",
    "pyDOE>=0.3.8",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
    "pre-commit>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/Xiaohu-Zheng/Deep-aPCE"
Documentation = "https://github.com/Xiaohu-Zheng/Deep-aPCE#readme"
Repository = "https://github.com/Xiaohu-Zheng/Deep-aPCE.git"
Bug-Tracker = "https://github.com/Xiaohu-Zheng/Deep-aPCE/issues"

[tool.setuptools]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310']

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=term-missing --cov-report=html"
